 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.3:

 - [ZBX-1] fixed wrong status of function "nodata" after server restart (Sasha)
 - [ZBX-33] fixed problem in table names in data.sql for PostgreSQL (Sasha)
 - [ZBX-32] fixed incorrect processing of IP ranges in ip_in_list (Sasha)
 - [ZBX-35] fixed processing of PROFILE related macros (Alexei)
 - support of macro {ITEM.LASTVALUE} for notifications and trigger names (Alexei)
 - fixed SQL statement in SLA processing. Thanks to Aron Ujvari. (Alexei)
 - updated Spanish translation. Thanks to Ignacio Martin. (Alexei) 
 - [ZBX-24] fixed Queue to show status of current node only (Alexei)
 - support of encoding of log files to displayed encoding (Alexei)
 - [ZBX-12] fixed calculations in ZABBIX availability report (Alexei)
 - [ZBX-11] fixed Free BSD 4.x 64 bit-related issues (Alexei)
 - [ZBX-10] added Russian translation. Thanks to Hiddenman. (Alexei)
 - fixed PostgreSQL error in synchronization of graphs (Alexei)
 - minor grammar fixes (Alexei)
 - fixed compilation of ZABBIX agent under Mac OS/X (Alexei)
 - fixed memory leak when processing non-existant trapper item (Alexei)
 - fixed unefficient SQL in browsing of events (Alexei)
 - fixed iregexp() (Alexei)
 - fixed detection of __VA_ARGS__ (Eugene)
 - added numeric parameters support for trigger description "$1 $2 .. $9" (Eugene)
 - fixed SQL problem in Configuration->Graphs, all graphs selected (Alexei)

Changes for 1.4.2:

 - fixed validation of trigger expression (Eugene)
 - fixed '{HOSTNAME}' macros using for actions (Eugene)
 - fixed e-mail sending to the pedantic qmail (Eugene)
 - fixed communication between systems with different byte orders (Eugene)